src/objects/Opportunity_Order__c/Opportunity_Order__c.object-meta.xml
<CustomObject>
    <label>Opportunity Order</label>
    <nameField>
        <displayFormat>OO-{0}</displayFormat>
        <label>Opportunity Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>