src/objects/Opportunity_Order__c/fields/Order_number__c.field-meta.xml
<CustomField>
    <fullName>Order_number__c</fullName>
    <externalId>true</externalId>
    <label>Order number</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>