src/objects/Opportunity_Order__c/validationRules/Opportunity_Valid_For_Booking.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_Valid_For_Booking</fullName>
    <active>true</active>
    <errorConditionFormula>and( 
not( left(Order_number__c,3) = &quot;APO&quot;), 
not( Opportunity_Advanced_Funding__c = true ), 
not( Opportunity_Stage__c = &apos;Closed Won&apos; )
)</errorConditionFormula>
    <errorMessage>Opportunity must be closed won or allow advance funding.</errorMessage>
</ValidationRule>