src/objects/Opportunity_Order__c/listViews/All_APO.listView-meta.xml
<ListView>
    <fullName>All_APO</fullName>
    <columns>NAME</columns>
    <columns>Order_number__c</columns>
    <columns>Opportunity__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Opportunity__c</field>
        <operation>equals</operation>
        <value>GoDirect PC-12 1291 HB-FVM</value>
    </filters>
    <label>All_APO</label>
</ListView>