src/objects/Opportunity_Order__c/listViews/All_APO_Spiral.listView-meta.xml
<ListView>
    <fullName>All_APO_Spiral</fullName>
    <columns>NAME</columns>
    <columns>Order_number__c</columns>
    <columns>Opportunity__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Order_number__c</field>
        <operation>contains</operation>
        <value>APO</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>contains</operation>
        <value>Spiral</value>
    </filters>
    <label>All_APO_Spiral</label>
    <language>en_US</language>
</ListView>