src/objects/Opportunity_Order__c/listViews/AllLM.listView-meta.xml
<ListView>
    <fullName>AllLM</fullName>
    <columns>NAME</columns>
    <columns>Order_number__c</columns>
    <columns>Opportunity__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Account__c</columns>
    <columns>Account_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account_Name__c</field>
        <operation>contains</operation>
        <value>Worth</value>
    </filters>
    <label>All-LM</label>
    <language>en_US</language>
</ListView>