src/objects/Opportunity_Order__c/listViews/DLA_Opportunity_Orders.listView-meta.xml
<ListView>
    <fullName>DLA_Opportunity_Orders</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Order_Purchase_Order__c</columns>
    <columns>Order_Program__c</columns>
    <columns>Order_number__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Opportunity_Stage__c</columns>
    <columns>Order_Contract__c</columns>
    <columns>SBU__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Opportunity__c</field>
        <operation>contains</operation>
        <value>Aviation Spares,MASTER</value>
    </filters>
    <filters>
        <field>Opportunity__c</field>
        <operation>contains</operation>
        <value>DLA</value>
    </filters>
    <filters>
        <field>Order_Purchase_Order__c</field>
        <operation>contains</operation>
        <value>D-94</value>
    </filters>
    <label>DLA Opportunity Orders</label>
</ListView>