src/objects/Opportunity_Order__c/listViews/f_22.listView-meta.xml
<ListView>
    <fullName>f_22</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Order_number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Opportunity__c</field>
        <operation>equals</operation>
        <value>LUFTHANSA BOMBARDIER AVIATION SVS LBAS - R&amp;O APU Blanket</value>
    </filters>
    <label>APO Fixes</label>
</ListView>