src/objects/Opportunity_Order__c/listViews/Opportunity_Orders_by_PO_Number.listView-meta.xml
<ListView>
    <fullName>Opportunity_Orders_by_PO_Number</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Order_Purchase_Order__c</columns>
    <columns>Order_number__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Order_Contract__c</columns>
    <columns>Order_Program__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>equals</operation>
        <value>Various BGA Aftermarket MSP</value>
    </filters>
    <label>Opportunity Orders by PO Number</label>
</ListView>